--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "tailwind:init": "tailwindcss init -p"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "driver.js": "^1.3.6",
     "lucide-react": "^0.525.0",
     "papaparse": "^5.5.3",
     "radix-ui": "^1.4.2",
